# PlateformerSFML

./: CMakeLists.txt
include/: rectangle.h  utility.h
src/: main.cpp  rectangle.cpp  utility.cpp
